# Panoramica360

./: CMakeLists.txt  README.md
src/: panoramica.cpp
